added function addDrinkImg, addDrink, deleteDrink and getDrink
