# routes/api/drinks.js
@@ -1,22 +1,34 @@
 const express = require("express");
 const router = express.Router();
 const ctrl = require("../../controllers/drinks");
-const { validateBody, isValidId, authenticate } = require("../../middlewares");
+const { validateBody, isValidId, authenticate, upload } = require("../../middlewares");
 
-const { schemasRecipe } = require("../../models/recipe");
+const { schemasDrinks } = require("../../models/drinks");
+const { schemas } = require("../../models/user");
 
-// router.get("/mainpage", authenticate, ctrl.getMainpageDrinks);
+router.get(
+  "/mainpage",
+  // authenticate,
+  ctrl.getMainpageDrinks
+);
 
-// router.get("/popular", authenticate, ctrl.getPopularDrinks);
+router.get("/popular",
+  // authenticate,
+  ctrl.getPopularDrinks);
 
 router.get("/search", authenticate, ctrl.searchDrinks);
-// router.get("/search", ctrl.searchDrinks);
+
+router.post(
+  "/own/add/img",
+  authenticate,
+  upload.single("cocktail"),
+  ctrl.addDrinkImg
+);
 
 router.post(
   "/own/add",
   authenticate,
-  isValidId,
-  validateBody(schemasRecipe.addSchema),
+  validateBody(schemasDrinks.addDrinkSchema),
   ctrl.addDrink
 );
 
@@ -27,18 +39,12 @@ router.delete(
   ctrl.deleteDrink
 );
 
-router.get(
-  "/own",
-  authenticate,
-  isValidId,
-  validateBody(schemasRecipe.addSchema),
-  ctrl.getDrink
-);
+router.get("/own", authenticate, ctrl.getDrink);
 
 router.post(
   "/favorite/add",
   authenticate,
-  validateBody(schemasRecipe.addSchema),
+  validateBody(schemas.updatUserSchema),
   ctrl.addFavoriteDrink
 );
 
